[gd_scene load_steps=5 format=3 uid="uid://fq2o6qggd27f"]

[ext_resource type="Script" path="res://scripts/ice_wave.gd" id="1_5lec6"]

[sub_resource type="Gradient" id="Gradient_fl76i"]
offsets = PackedFloat32Array(0.00649351, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u4q3o"]
gradient = SubResource("Gradient_fl76i")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.821101, 0.16055)

[sub_resource type="CircleShape2D" id="CircleShape2D_vkh0m"]
radius = 4.0

[node name="IceWave" type="Node2D"]
z_index = 2
z_as_relative = false
script = ExtResource("1_5lec6")
velocity = 100.0

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 0.647059, 0.74902, 1)
shadow_enabled = true
texture = SubResource("GradientTexture2D_u4q3o")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vkh0m")

[node name="Ray" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true

[node name="IceDropTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Lifetime" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="IceDropTimer" to="." method="_on_ice_drop_timer_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="collide"]
